# Goodreads_Library_Availability

./: .eslintrc  .gitignore  README.md  main.py  pyproject.toml
gr_lib_sync/: app.py  lib.py  moco-wip.py  moco.py  toRead-wip.py  toRead.py
tests/: test_gr_lib_sync.py  test_lib.py  test_moco.py  test_toRead.py
web_app/: index.html  main.js  styles.css
