[tool.poetry]
name = "gr_lib_sync"
version = "0.0.1"
description = "Check book availability at the Montgomery County Public Library"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
rauth = "^0.7.3"
beautifulsoup4 = "^4.7"
jsonlines = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
